# docker-elk

./: -v  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .travis.yml  Elasticsearch docker-compose  Jenkinsfile  Kiyan.md  LICENSE  README.md  README_local.md  README_original.md  SECURITY.md  Vagrantfile  build.sh  circle.yml  demo.tape  docker-compose-dev.yml  docker-compose-local.yml  docker-compose-staging.yml  docker-compose-swarm.yml  docker-compose.override.yml  docker-compose.tls.yml  docker-compose.yml  docker-stack.yml  docker-swarm.yml  es.yml  example.env  fig.yml  initializationSteps.txt  kibana docker compose  logspout.yml  logstash-dockercompose  package-lock.json  package.json  requirements.txt  self-signed-tls.md  sentinl.md
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  issue_report.md
.github/workflows/: ci.yml  deploy.yml  docs.yml  manual.yml  mlc_config.json  shiftleft-analysis.yml  spam-issue-close.yml  update-merge.yml  update.yml
.travis/: elasticsearch-setup-passwords.exp  elasticsearch-setup-passwords.sh  run-tests-apm-server.sh  run-tests-app-search.sh  run-tests-core.sh  run-tests-enterprise-search.sh  run-tests.sh
.travis/lib/: testing.sh
_oteldemo/: .env  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  ide-gen-proto.sh  package-lock.json  package.json
_oteldemo/kubernetes/: opentelemetry-demo.yaml
_oteldemo/pb/: demo.proto
_oteldemo/src/currencyservice/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
_oteldemo/src/currencyservice/data/: currency_conversion.json
_oteldemo/src/currencyservice/proto/: demo.proto
_oteldemo/src/currencyservice/src/: meter_common.h  server.cpp  tracer_common.h
_oteldemo/src/shippingservice/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
_oteldemo/src/shippingservice/src/: main.rs  shipping_service.rs
_oteldemo/src/shippingservice/src/shipping_service/: quote.rs  tracking.rs
_oteldemo/test/: Dockerfile  README.md  data.json  package-lock.json  package.json  test.js
all_pipelines/: dev.conf
app/apm-server/: apm-server.docker.yml  docker-compose.yml
app/elk/: docker-compose.yml
app/otel-col/: docker-compose.yml  otel-collector-config.yaml
caddy/: Caddyfile  Dockerfile
clickhouse/: comiru.sql
clickhouse/config/: config.xml  users.xml
curator/: .Dockerfile.swp  Dockerfile
curator/config/: curator.yml  delete_index.yml
curator/crontabs/: root
elasticsearch/: Dockerfile  Dockerfile.aarch64  docker-healthcheck  entry-point.sh  entrypoint.sh
elasticsearch-head/: Dockerfile
elasticsearch/config/: elasticsearch.yml  elasticsearch2.yml  node-0-keystore.jks  sg_roles.yml  truststore.jks
elasticsearch/prepare_baskup/: prepare_backup.sh
elasticsearch/scripts/: AutomatedMCPCall.py  entrypoint.sh  requirements.txt
extensions/: README.md
extensions/apm-server/: Dockerfile  README.md  apm-server-compose.yml
extensions/app-search/: Dockerfile  README.md  app-search-compose.yml
extensions/curator/: Dockerfile  README.md  curator-compose.yml  entrypoint.sh
extensions/enterprise-search/: Dockerfile  README.md  enterprise-search-compose.yml
extensions/filebeat/: Dockerfile  README.md  filebeat-compose.yml
extensions/fleet/: Dockerfile  README.md  agent-apmserver-compose.yml  fleet-compose.yml
extensions/heartbeat/: Dockerfile  README.md  heartbeat-compose.yml
extensions/logspout/: Dockerfile  README.md  build.sh  logspout-compose.yml  modules.go
extensions/metricbeat/: Dockerfile  README.md  (+1 more)
filebeat/: Dockerfile  cognos_filebeat.sh  filebeat.yml
fluentbit/: Dockerfile
fluentd/: .dockerignore  Dockerfile
jinja-report/: activity.py  build-report-jinja.py  collect_data.py  config.yaml  doi.py  elastic.py  organizations.py  plot.py  resources.py  series_models.py  spam.py  users.py  users_pie.py  utilities.py
kibana/: Dockerfile  Dockerfile.aarch64  docker-healthcheck  entrypoint.sh  export.ndjson
kibana_firmware/: Dockerfile
log/: README.md
log-gateway/: Dockerfile  package-lock.json  package.json  tsconfig.json
logs/: .gitignore
logspout/: modules.go
logstash/: Dockerfile  Dockerfile.aarch64
logstash-agent/: logstash.conf  sample.json
logstash-conf/: logstash.conf
logstash_cloud/: Dockerfile
mcpcall/: Dockerfile  requirements.txt
metricbeat/: Dockerfile
nginx/: Dockerfile  es.conf  kibana.conf  nginx.conf  ssl-params.conf
old/: README.md  install.sh
report-generation/: build-report.py  collect_data.py  elastic.py  organizations.py  requirements.txt  users.py
scripts/: build.sh  cms.py  deploy.sh  doi_citation_count.py  elastic.py  environment.yml  getdata.py  kill-tasks.js  purge_test_user_data.py  session_stats.py
self-cert/: .dockerignore  Dockerfile
setup/: .dockerignore  Dockerfile  entrypoint.sh  helpers.sh  lib.sh
test/: Dockerfile  README.md  run.sh
tls/: .gitignore  Dockerfile  README.md  entrypoint.sh  instances.yml
(+457 files in other folders)
